--- a/MusicApp/app/src/main/AndroidManifest.xml
+++ b/MusicApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:label="Songs Library">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".NowPlaying"> </activity>
+        <activity android:name=".NowPlaying" android:label="Music Player"> </activity>
     </application>
 
 </manifest>
